@@ -40,11 +40,31 @@ public class TravelDistanceRater implements Rater {
 
     @Override
     public double getScore() {
-        double score;
-        if (0 <= actualDistance && actualDistance < worstDistance * factor) {
-            score = 1 - (actualDistance / worstDistance*factor);
-        } else score = 0;
-        return score;
+
+        if(actualDistance == 0.0){
+            return 0.0;
+        }
+        if (worstDistance == actualDistance) {
+            return 1.0;
+        }
+
+
+        //if (actualDistance == 0.0) {
+        //    return 0.0;
+        //}
+        //if (actualDistance >= worstDistance * factor) {
+        //    return 1.0;
+        //}
+        //return (worstDistance * factor - actualDistance) / (worstDistance * factor);
+
+         else {
+            double factorizedWorstDistance = worstDistance * factor;
+            if (actualDistance >= factorizedWorstDistance) {
+                return 0.0;
+            } else {
+                return 1.0 - (actualDistance / factorizedWorstDistance);
+            }
+        }
     }
 
     @Override
@@ -54,17 +74,15 @@ public class TravelDistanceRater implements Rater {
 
     @Override
     public void onTick(List<Event> events, long tick) {
-
-        double distanceSum = 0;
-
-
+        double distanceSum = 0.0;
 
         List<Long> distances = events.stream()
                 .filter(x -> x instanceof ArrivedAtNodeEvent)
                 .map(y -> (ArrivedAtNodeEvent) y)
-                .map(x -> x.getLastEdge().getDuration()).toList();
+                .map(x -> x.getLastEdge().getDuration())
+                .collect(Collectors.toList());
 
-        for (Long n: distances) {
+        for (Long n : distances) {
             distanceSum += n;
         }
 
@@ -73,13 +91,9 @@ public class TravelDistanceRater implements Rater {
                 .map(y -> (DeliverOrderEvent) y)
                 .filter(x -> x.getOrder() != null)
                 .map(z -> {
-
                     Region.Restaurant restaurant = z.getOrder().getRestaurant().getComponent();
-
                     Region.Node restaurantNode = region.getNode(restaurant.getLocation());
-
                     List<Region.Node> path = pathCalculator.getPath(restaurantNode, z.getNode()).stream().toList();
-
                     long distance = 0;
 
                     for (int i = 0; i < path.size(); i++) {
@@ -87,20 +101,19 @@ public class TravelDistanceRater implements Rater {
                             distance += region.getEdge(restaurantNode, path.get(i)).getDuration();
                         } else {
                             distance += region.getEdge(path.get(i), path.get(i - 1)).getDuration();
-
                         }
                     }
                     return distance;
-                }).toList();
+                }).collect(Collectors.toList());
 
-
-        actualDistance = distanceSum;
-
-        for (long a: worstDistancesStream) {
+        for (long a : worstDistancesStream) {
             distanceSum += a;
         }
+
         worstDistance = distanceSum;
+        actualDistance = distanceSum - worstDistancesStream.stream().mapToLong(Long::longValue).sum();
     }
+
 
     /**
      * A {@link Rater.Factory} for creating a new {@link TravelDistanceRater}.
